--- a/css/header_style.css
+++ b/css/header_style.css
@@ -18,6 +18,8 @@
         padding: 0;
         top: 0;
         background-image: linear-gradient(to right, white, lightblue);
+        background-size: cover;
+        background-clip: initial;
         display: table;
         width: 100%;
         position: relative;
@@ -111,3 +113,42 @@
     a:hover {
         text-decoration: underline;
     }
+
+    .row {
+        display: table;
+        margin: 10;
+        padding: 10;
+        /* top: 0; */
+        background-image: linear-gradient(to right, white, red);
+        display: table;
+        width: 100%;
+        /* position: relative; */
+    }
+
+    /* Style the top navigation bar */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  /* Style the navigation bar links */
+  .navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+  }
+  
+  /* Right-aligned link */
+  .navbar a.right {
+    float: right;
+  }
+  
+  /* Change color on hover */
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
