--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,24 +1,32 @@
 
-input[type=text], select, textarea {
+  input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+    background-color: white;
+    font-size: 80%;
   }
   
+  input[type=text]:hover {
+    background-color: rgb(136, 191, 236);
+  }
+  
+
   label {
     padding: 12px 12px 12px 0;
     display: inline-block;
   }
   
   input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #6a7c6b;
+    color: rgb(255, 255, 255);
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top:5px;
     float: right;
   }
   
@@ -26,6 +34,8 @@ input[type=text], select, textarea {
     background-color: #45a049;
   }
   
+
+
   .container {
     border-radius: 5px;
     background-color: red;
