--- a/css/header_style.css
+++ b/css/header_style.css
@@ -119,7 +119,7 @@
         margin: 10;
         padding: 10;
         /* top: 0; */
-        background-image: linear-gradient(to right, white, red);
+        /* background-image: linear-gradient(to right, white, red); */
         display: table;
         width: 100%;
         /* position: relative; */
