--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,39 +1,47 @@
 
-  input[type=text], select, textarea {
+  .log_in {
+    resize: vertical;
+    margin-bottom: 5px;
+  }
+
+  .log_in input[type=text], .log_in input[type=password], .log_in select, .log_in textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    resize: vertical;
+    /* resize: vertical; */
     background-color: white;
     font-size: 80%;
+    margin-bottom: 2px;
   }
   
-  input[type=text]:hover {
+  .log_in input[type=text]:hover, .log_in input[type=password]:hover {
     background-color: rgb(136, 191, 236);
+    /* background-color:  pink; */
   }
   
 
-  label {
+  .log_in label {
     padding: 12px 12px 12px 0;
     display: inline-block;
   }
   
-  input[type=submit] {
-    background-color: #6a7c6b;
+  .log_in input[type=submit] {
+    background-color: #44b84a;
     color: rgb(255, 255, 255);
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-top:5px;
-    float: right;
+    margin-top:3px;
+    float: left;
   }
   
-  input[type=submit]:hover {
-    background-color: #45a049;
+  .log_in input[type=submit]:hover {
+    background-color: #43a547;
+    color: rgb(172, 194, 166);
+    /* background-color: pink; */
   }
-  
 
 
   .container {
@@ -53,14 +61,13 @@
     width: 75%;
     margin-top: 6px;
   }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
   }
-  
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
     .col-25, .col-75, input[type=submit] {
