--- a/css/login_style.css
+++ b/css/login_style.css
@@ -25,7 +25,7 @@
 	  height: 80%;
 	  width: 50%;
 	  display: flex;
-	  /* padding: 10%; */
+	  align-content: flex-end;
 	  background-color: blue;
   }
 
