--- a/css/header_style.css
+++ b/css/header_style.css
@@ -12,7 +12,7 @@
 
     html, body{
 		width: 100%;
-        margin-right: 0;
+        margin: 0;
 		height: 50%;
 		padding: 0;
 		/* padding: 0; */
