--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,8 +1,8 @@
 .login-container {
 	width: 55%;
 	height:100%;
-	align-items: center;
-	/* display: flex; */
+	/* align-items: flex-end; */
+	display:  inline-block;
 	padding-right: 0;
 	background-color: pink;
 }
