--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -7,6 +7,7 @@ head {
 
 html, body {
 	max-width: 100%;
+	height: auto;
 	margin: 0%;
 	transition: background-color .5s;
 }
@@ -14,7 +15,8 @@ html, body {
 
 .Searchrow {
 	width: 100%;
-	height: 50px;
+	/* height: 50px; */
+	height: 20%;
 	display: flex;
     justify-content: center;
 	text-align: center;
@@ -161,7 +163,8 @@ html, body {
 
 .QuickAccessRow {
 	width: 100%;
-	height: 200px;
+	/* height: 200px; */
+	height: 100%;
 	display: flex;
     justify-content: center;
     align-items: center;
@@ -182,7 +185,7 @@ html, body {
 
 .FSTitlerow{
 	display: flex;
-	height: 50px;
+	height: 20%
 	text-align: center;
 	justify-content: center;
 	grid-column-start: 1;
@@ -247,7 +250,8 @@ div.searchable {
 
 .searchable input {
     width: 100%;
-    height: 50px;
+    /* height: 50px; */
+	height: 20%;
     font-size: 18px;
     padding: 10px;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -296,7 +300,8 @@ div.searchable {
 
 .JESearchRow {
 	width: 100%;
-	height: 250px;
+	/* height: 250px; */
+	height: 100%;
 	display: flex;
 	text-align: center;
 	justify-content: center;
@@ -337,7 +342,8 @@ div.searchable {
 
 .SampleRow {
 	width: 100%;
-	height: 300px;
+	/* height: 300px; */
+	height: 20%;
 	display: flex;
 	background-color: white;
 }
@@ -411,7 +417,7 @@ div.searchable {
 
 .covbuttcontainer {
 	width: 10%;
-	height: 10%;
+	height: 100%;
 	background-color: red;
 	display: flex;
 }
@@ -419,17 +425,16 @@ div.searchable {
 .covidbutton {
 	padding-top: 100%;
 	border-radius: 50%;
-	border: 2px solid green;
 	position: relative;
 	background-color: blue;
 }
 
 .covbuttcontent {
 	position: absolute;
-top: 0;
-left: 0;
-bottom: 0;
-right: 0;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
 
 .sidenav {
