--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -20,20 +20,21 @@ html, body {
 	display: flex;
     justify-content: center;
 	text-align: center;
-	/* background-color: palevioletred; */
-	padding-top: 10px;
-	padding-bottom: 10px;
+	background-color: palevioletred;
+	padding-top: 1%;
+	padding-bottom: 1%;
 }
 
 .dropdown {
 	width: 15%;
+	height: 100%;
 	/* height: 20%; */
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .dropdown .categorybutton {
 	width: 100%;
-	/* height: 42px; */
+	height: 100%;
 	text-align: center;
 	text-decoration: none;
 	display: flex;
@@ -51,7 +52,7 @@ html, body {
   display: none;
   position: absolute;
   background-color: pink;
-  min-width: 160px;
+  /* min-width: 160px; */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -73,7 +74,7 @@ html, body {
 
 .searchbar {
 	width: 45%;
-	/* height: 40px; */
+	height: 100%;
 	text-align: left;
 	text-decoration: none;
 	display: flex;
@@ -185,7 +186,7 @@ html, body {
 
 .FSTitlerow{
 	display: flex;
-	height: 20%
+	height: 20%;
 	text-align: center;
 	justify-content: center;
 	grid-column-start: 1;
