--- a/css/header_style.css
+++ b/css/header_style.css
@@ -73,7 +73,7 @@
 		height: 100%;
 		display: flex;
 		align-items: center;
-		background-color: red;
+		/* background-color: red; */
 	}
 
     .myhLogo img{
