--- a/css/login_style.css
+++ b/css/login_style.css
@@ -4,7 +4,7 @@
 	/* align-items: flex-end; */
 	display:  inline-block;
 	padding-right: 0;
-	background-color: pink;
+	/* background-color: pink; */
 }
 
 .language-container {
@@ -26,7 +26,7 @@
 	  width: 50%;
 	  display: flex;
 	  align-content: flex-end;
-	  background-color: blue;
+	  /* background-color: blue; */
   }
 
   .log_in input[type=text], .log_in input[type=password], .log_in select, .log_in textarea {
@@ -72,7 +72,7 @@
 
   .container {
     border-radius: 5px;
-    background-color: red;
+    /* background-color: red; */
     padding: 20px;
   }
 
