--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -16,7 +16,7 @@ html, body {
 .Searchrow {
 	width: 100%;
 	/* height: 50px; */
-	height: 20%;
+	height: 5%;
 	display: flex;
     justify-content: center;
 	text-align: center;
@@ -112,7 +112,7 @@ html, body {
 
 /* PERSONA STYLE */
 .Personatext {
-	height: 25%;
+	height: 5%;
 	width: 16%;
 
 	color: black;
@@ -165,7 +165,7 @@ html, body {
 .QuickAccessRow {
 	width: 100%;
 	/* height: 200px; */
-	height: 100%;
+	height: 30%;
 	display: flex;
     justify-content: center;
     align-items: center;
@@ -252,7 +252,7 @@ div.searchable {
 .searchable input {
     width: 100%;
     /* height: 50px; */
-	height: 20%;
+	height: 25%;
     font-size: 18px;
     padding: 10px;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -302,10 +302,11 @@ div.searchable {
 .JESearchRow {
 	width: 100%;
 	/* height: 250px; */
-	height: 100%;
+	height: 20%;
 	display: flex;
 	text-align: center;
 	justify-content: center;
+	padding: 2%;
 	background-color: lightblue;
 }
 
