--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,49 +1,68 @@
 .login-container {
-	width: 55%;
-	height:100%;
-	/* align-items: flex-end; */
-	display:  inline-block;
-	padding-right: 0;
-	/* background-color: pink; */
+	width: 40%;
+	height: 100%;
+  display:  inline-block;
+  position: relative;
 }
 
 .language-container {
-	width: 50%;
+  position: relative;
+  width: 80%;
 	height: 20%;
-	margin-left: 50%;
-	margin-top: 0;
-	background-color: green;
-	text-align: right;
 	display: flex;
-	align-items: center;
-	color: grey;
+  align-items: center;
+  justify-content: flex-end;
+  color: black;
 }
 
   .log_in {
-	  margin-left: 50%;
-	  margin-right: 10%;
+    position: relative;
 	  height: 80%;
-	  width: 50%;
-	  display: flex;
-	  align-content: flex-end;
-	  /* background-color: blue; */
+	  max-width: 100%;
+    display: flex;
+    margin: 0;
+    align-content: center;
+    justify-content: flex-start;
+    /* border: 2px solid red; */
+  }
+
+  .login_form_container{
+    display: flex;
+    position: relative;
+    align-content: center;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 80%;
+    border: 2px solid red;
+  }
+
+  .login_submit_container{
+    display: flex;
+    position: relative;
+    align-content: center;
+    justify-content: center;
+    max-width: auto;
+    max-height: auto;
+    padding-top: 2%;
+    vertical-align: middle;
+    /* border: 2px solid red; */
+  }
+
+  .log_in form{
+    float: left;
   }
 
   .log_in input[type=text], .log_in input[type=password], .log_in select, .log_in textarea {
-    width: 60%;
-	height: 30%;
+    width: 45%;
+	  height: 30%;
     border: 1px solid #ccc;
     border-radius: 4px;
-    /* resize: vertical; */
     background-color: white;
     font-size: 80%;
-    margin-top: 1%;
-	margin-bottom: 1%;
   }
 
   .log_in input[type=text]:hover, .log_in input[type=password]:hover {
     background-color: rgb(136, 191, 236);
-    /* background-color:  pink; */
   }
 
 
@@ -59,14 +78,11 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-top:3px;
-    float: left;
   }
 
   .log_in input[type=submit]:hover {
     background-color: #43a547;
     color: rgb(172, 194, 166);
-    /* background-color: pink; */
   }
 
 
@@ -76,17 +92,6 @@
     padding: 20px;
   }
 
-  .col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
-  }
-
-  .col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-  }
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
     .col-25, .col-75, input[type=submit] {
