wtf am i even doing

--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -3,6 +3,7 @@
 head {
 	margin: 0;
 	padding: 0;
+
 }
 
 html, body {
@@ -12,8 +13,20 @@ html, body {
 	transition: background-color .5s;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+}
+.sticky2 {
+  position: fixed;
+  top: 10%;
+  width: 100%;
+}
 
 .Searchrow {
+	margin-top: 10%;
 	width: 100%;
 	/* height: 50px; */
 	height: 5%;
@@ -29,7 +42,7 @@ html, body {
 	width: 15%;
 	height: 100%;
 	/* height: 20%; */
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .dropdown .categorybutton {
