--- a/css/register_style.css
+++ b/css/register_style.css
@@ -1,137 +1,1 @@
-.register_button{
-    display: inline-block;
-    /* max-width: 30%; */
-    /* max-height: auto; */
-    /* position: absolute; */
-    /* padding: 50%; */
-    color: white;
-    opacity: 0.9;
-    align-content: center;
-    justify-content: center;
-    cursor:pointer;
-    background-color: pink;
-    /* vertical-align: middle; */
-    text-align: center;
-}
-
-.register {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    opacity: 0.7;
-    z-index: 0;
-}
-
-.register_popup{
-	background-color: white;
-    display: none;
-    position: fixed;
-    border: 1px groove lightgrey;
-    border-radius: 10px;
-    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 27%;
-    height: 70%;
-    z-index: 1;
-}
-
-.register_container{
-	background-color: none;
-	width: auto;
-	padding-top: 10%;
-    padding: 4%;
-	display: grid;
-	justify-content: center;
-    /* padding-right: 20px; */
-}
-
-
-.x_button{
-    display: flex;
-    position: absolute;
-    float: right;
-    top: 3%;
-    right: 5%;
-    width: 7%;
-    height: 4%;
-    min-height: 5%;
-    /* border: 2px solid red; */
-    object-fit: fill;
-}
-
-
-.x_button img{
-    display: block;
-    margin-top: auto;
-    margin-bottom: auto;
-    /* margin-right: auto; */
-    margin-left: auto;
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-}
-
-.together {
-	width: 100%;
-	display: flex;
-	padding-left: 4%;
-	padding-right: 4%;
-	height: 100%;
-	margin-bottom: 0;
-	/* background-color: palevioletred; */
-}
-
-.alone {
-	background-color: blue;
-	width: inherit;
-	padding-left: 4%;
-	padding-right: 4%;
-	height: 100%;
-	padding-top: 0;
-	padding-bottom: 0;
-}
-
-.register_container input, .register_container select{
-    margin-top: 10px;
-    margin-inline-end: 7px;
-    border: 3px solid #ccc;
-    background-color: whitesmoke;
-    border-radius: 5px;
-	align-items: center;
-	width: 90%;
-	height: 70%;
-	padding: 2%;
-	text-align: left;
-}
-
-.register_container input:focus{
-    border: 3px solid #555;
-    background-color: whitesmoke;
-}
-
-.register_container input:hover{
-    border: 3px solid #555;
-    background-color: #555;
-}
-
-.register_container input[type=submit]{
-    display: absolute;
-    margin-left: 15%;
-    background-color: #44b84a;
-    color: rgb(255, 255, 255);
-    border: none;
-    width: 70%;
-    height: 10%;
-    cursor: pointer;
-}
-
-.register_container input[type=submit]:hover {
-    background-color: #43a547;
-    color: rgb(172, 194, 166);
-}
+.
