--- a/css/contact.css
+++ b/css/contact.css
@@ -1,46 +1,31 @@
 head {
 	margin: 0;
 	padding: 8%;
+	width: 100%;
+
+}
+
+html {
+	height: 100%;
+	width: 100%;
 }
 
 body {
+	width: 100%;
+	height: 100%;
 	width: 100;
 	padding: 8%;
 }
-/* icons */
-.gg-time {
-    box-sizing: border-box;
-    /* position: relative; */
-    display: block;
-    transform: scale(var(--ggs,1));
-    width: 18px;
-    height: 18px;
-    border-radius: 100%;
-    border: 2px solid transparent;
-    box-shadow: 0 0 0 2px currentColor
+
+#googleMap {
+	height: 100%;
 }
 
-.gg-time::after {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    width: 7px;
-    height: 7px;
-    border-left: 2px solid;
-    border-bottom: 2px solid;
-    top: 1px;
-    left: 5px
-}
-/* icons */
-
-
-/* Map */
-#map {
-  height: 400px;
-  /* The height is 400 pixels */
-  width: 100%;
-  /* The width is the width of the web page */
+.mapcontainer {
+	width: 40%;
+	height: 40%;
+	background-color: pink;
+	margin-left: 8%;
 }
 
 
