--- a/css/contact.css
+++ b/css/contact.css
@@ -75,3 +75,12 @@ body {
 	height: 20;
 	margin-right: 2%;
 }
+
+.EContactTableContainer {
+	width: 40%;
+	height: 10%;
+	background-color: lightblue;
+	margin-left: 8%;
+	align-content: flex-start;
+	display: inline;
+}
