--- a/css/register_style.css
+++ b/css/register_style.css
@@ -32,7 +32,7 @@
 	background-color: white;
     /* grid-template-areas: 'left mid1 mid2 right'; */
     position: absolute;
-    display: block;
+    display: none;
     border: 1px groove lightgrey;
     border-radius: 10px;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
