--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -315,7 +315,7 @@ div.searchable {
 /* JOB - EMPLOYEE search */
 
 .JESearchRow {
-	width: 100%;
+	max-width: 100%;
 	/* height: 250px; */
 	height: 20%;
 	display: flex;
