--- a/css/contact.css
+++ b/css/contact.css
@@ -11,8 +11,7 @@ html {
 }
 
 body {
-	width: 100%;
-	height: 100%;
+	max-height: 100%;
 	width: 100;
 	padding: 8%;
 }
@@ -22,6 +21,7 @@ body {
 	width: 100%;
 	height: auto;
 	display:  flex;
+	margin-bottom: 17%;
 }
 
 .Col_1 {
@@ -235,7 +235,7 @@ body {
 
 .DepartmentTitle {
 	height: 10%;
-	width: auto%;
+	width: auto;
 	background-color: aliceblue;
 	color: black;
 	font-size: 23px;
