--- a/css/header_style.css
+++ b/css/header_style.css
@@ -12,9 +12,9 @@ head{
 }
 
 html, body{
-    max-width: 100%;
+    width: 100%;
     margin: 0;
-    /* height: %; */
+    /* height: auto; */
     padding: 0;
     /* padding: 0; */
 }
@@ -39,7 +39,7 @@ html, body{
     max-height: 30%;
     /* border-image: linear-gradient(to right, whitesmoke, rgb(107, 145, 214)); */
 
-    border-bottom: 2px solid rgb(105, 157, 161);
+    /* border-bottom: 2px solid rgb(105, 157, 161); */
 }
 
 .myheader img{
@@ -86,6 +86,10 @@ ol il{
     /* border: 2px solid red; */
 }
 
+.logotxt a, .logotxt a:hover{
+    text-decoration: none;
+    color: rgb(103, 141, 171);
+}
 
 .myh1{
     float: left;
