--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -361,9 +361,11 @@ div.searchable {
 .SampleRow {
 	width: 100%;
 	/* height: 300px; */
-	height: 20%;
+	height: auto;
 	display: flex;
 	background-color: white;
+	/* margin-bottom: 20%; */
+	/* background-color: pink; */
 }
 
 .SimpleContainer {
