--- a/css/login_style.css
+++ b/css/login_style.css
@@ -26,6 +26,17 @@
     /* border: 2px solid red; */
   }
 
+  .logged_in{
+    position: relative;
+    height: 80%;
+
+    max-width: 100%;
+    display: none;
+    margin: 0;
+    /* border: 2px solid red; */
+  }
+
+
   .login_form_container{
     display: flex;
     position: relative;
@@ -90,6 +101,14 @@
     /* background-color: red; */
     padding: 20px;
   }
+
+  .profile_actions{
+    display: flex;
+    height: auto;
+    width: auto;
+    color: rgba(128, 128, 128, 0.89)
+  }
+
 
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
