--- a/css/contact.css
+++ b/css/contact.css
@@ -6,15 +6,16 @@ head {
 }
 
 html {
-	height: 100%;
+	height: auto;
 	width: 100%;
 }
 
 body {
 	width: 100%;
-	height: 100%;
-	width: 100;
+	height: auto;
+	width: 100%;
 	padding: 8%;
+	/* margin: auto; */
 }
 
 .UltimateContainer
@@ -81,6 +82,7 @@ body {
 
 .InfoTitle {
 	font-size: 23px;
+	margin-bottom: 5%;
 	padding-left: 2%;
 	/* background-color: pink; */
 }
@@ -224,6 +226,7 @@ body {
 	justify-content: center;
 	font-size: 20px;
 	background-color: aliceblue;
+	overflow: scroll;
 }
 
 .SecondContainer {
@@ -235,7 +238,7 @@ body {
 
 .DepartmentTitle {
 	height: 10%;
-	width: auto%;
+	width: auto;
 	background-color: aliceblue;
 	color: black;
 	font-size: 23px;
