--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -50,6 +50,7 @@ html, body {
 .dropdown .categorybutton {
 	width: 100%;
 	height: 100%;
+	padding: 1%;
 	text-align: center;
 	text-decoration: none;
 	display: flex;
@@ -59,7 +60,7 @@ html, body {
 	color: grey;
 	border: 1px solid grey;
 	text-align: center;
-	/* background-color: powderblue; */
+	background-color: powderblue;
 	border-radius: 8px;
 }
 
@@ -464,10 +465,39 @@ div.searchable {
   padding-top: 60px;
 }
 
+.sidenav .categories {
+	width: 100%;
+	height: auto;
+	text-decoration: none;
+	/* font-size: 25px;
+	color: white; */
+	display: block;
+	padding:0;
+	/* overflow: visible; */
+	/* transition: 0.3s; */
+	margin: 0;
+}
+
+.categories p {
+	padding: 8px 8px 8px;
+	text-decoration: none;
+	font-size: 25px;
+	color: white;
+	display: block;
+	transition: 0.3s;
+	margin: 0;
+}
+
+.categories:hover {
+	text-decoration: underline;
+	text-decoration-color: white;
+	background-color: lightblue;
+}
+
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
   color: white;
   display: block;
   transition: 0.3s;
@@ -493,4 +523,55 @@ div.searchable {
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+
+/* dropdown covid categories */
+
+.sidenav .Cdropdown {
+	height: auto;
+	width: 100%;
+	float: left;
+	display: block;
+	margin-top: auto;
+	/* position: relative; */
+}
+
+.Cdropdown-content {
+	display: none;
+	/* columns: 1; */
+	position: absolute;
+	/* position: relative; */
+	background-color: CadetBlue;
+	width: 100%;
+	/* height: auto; */
+	left: 0;
+	/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+	/* z-index: 2; */
+	background-color:pink;
+}
+
+.Cdropdown-content a {
+	margin: 1px;
+	  float: left;
+	  color: grey;
+	  text-decoration: none;
+	  display: block;
+	  text-align: left;
+	  min-width: 100%;
+}
+
+.Cdropdown-content a:hover {
+	color: CadetBlue;
+	background-color: lightblue;
+}
+
+.Cdropdown:hover {
+	margin-bottom: 50;
+}
+
+.Cdropdown:hover .Cdropdown-content {
+  display: table-column;
+  background-color: whitesmoke;
+  margin: 0;
 }
